# cpp-utils

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  biicode.conf  monointerface.h  resourcehandler.h
include/cpp-utils/: array_view.h  as_const.h  assert.cpp  assert.h  benchmarking-utils.h  call.h  copy_policy.h  down_cast.h  export.h  iterator_range.h  lambda.h  likely.h  make_unique.h  on_debug.h  optional.h  preprocessor.h  printf_builder.h  printf_builder_std.h  printing.h  resolve.h  scope.h  to.h
include/cpp-utils/algorithm/: arguments.h  between.h  bytes.h  clamp.h  container.h  erase.h  find_if.h  length.h  range.h  reset.h  zero.h
include/cpp-utils/bits/: access_field.h  uncaught_exceptions.h
include/cpp-utils/compiler/: attributes.h  backtrace.h  compiler.h  demangle.h  lib-export.h  preprocessor.h
include/cpp-utils/constexpr/: carray.h  cstring.h  force.h  printf_builder.h
include/cpp-utils/containers/: bits.h
include/cpp-utils/detail/: normalize.h
include/cpp-utils/iostreams/: small_stringstream.h
include/cpp-utils/memory/: get.h  make_unique.h  malloc.h  malloc_ptr.h  maybe_null.h  not_null.h  ptr_algorithm.h  unique_array.h  unmanaged.h
include/cpp-utils/meta/: core.h  factory.h  require.h  staticforeach.h  void.h
include/cpp-utils/pattern/: embedded_pimple.h  monointerface.h  pimple.h  registry.h
include/cpp-utils/storage/: construct.h  storage.h  uninitized.h
include/cpp-utils/strings/: algorithm.h  string_builder.h  string_literal.h  string_view.h
tests/: CMakeLists.txt  copy_policy.cpp  down_cast.cpp  iterator_range.cpp  lambda.cpp  main.cpp  preprocessor.cpp  printf_builder.cpp  scope.cpp  tests.cpp
tests/algorithm/: container.cpp
tests/compiler/: demangle.cpp
tests/constexpr/: printf_builder.cpp
tests/memory/: get.cpp  not_null.cpp  unique_array.cpp
tests/pattern/: embedded_pimple.cpp  registry.cpp
tests/pattern/pimple/: embeddedpimpletest.cpp  embeddedpimpletest.h
tests/strings/: algos.cpp  string_builder.cpp
